# better-notes-client-kivy

./: .gitignore  Pipfile  README.md  buildozer.spec  main.py  pyproject.toml  setup.cfg
app/: __main__.py  domain.py  entity.py  main.py  repositores.py  settings.py
app/commons/: __init__.py  msgpack.py
app/notes/: apps.py
