[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vovchenko Nikita <vovchenko.nikita.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11.1"
bson = "^0.5.9"
funcy = "^1.14"
msgpack = "^1.0.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
ipdb = "^0.13.2"
black = {version = "^19.10b0", allow-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
py38 = true
skip-string-normalization = true
exclude = '(.git)'
